--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     </button>
 
                     <!-- lOGO TEXT HERE -->
-                    <a href="#" class="navbar-brand"><img src="/images/logo-g.png" alt="logo" height="40px" width="40px"></a>
+                    <a href="#" class="navbar-brand"><img src="images/Genius Logo.png" alt="logo" height="40px" width="40px"></a>
                     <a href="#" class="navbar-brand"><b>GENIUS</b></a>
                </div>
 
