--- a/team.html
+++ b/team.html
@@ -92,7 +92,7 @@
                   <div class="col-md-3 col-sm-6">
                        <div class="team-thumb">
                             <div class="team-image">
-                                 <img src="images/mendor-2.jpg" class="img-responsive" alt="">
+                                 <img src="images/2.png" class="img-responsive" alt="">
                             </div>
                             <div class="team-info">
                                  <h3>Abhai</h3>
@@ -108,7 +108,7 @@
                   <div class="col-md-3 col-sm-6">
                        <div class="team-thumb">
                             <div class="team-image">
-                                 <img src="images/mendor-3.jpg" class="img-responsive" alt="">
+                                 <img src="images/3.png" class="img-responsive" alt="">
                             </div>
                             <div class="team-info">
                                  <h3>Sameer</h3>
@@ -125,7 +125,7 @@
                   <div class="col-md-3 col-sm-6">
                        <div class="team-thumb">
                             <div class="team-image">
-                                 <img src="images/mendor-4.jpg" class="img-responsive" alt="">
+                                 <img src="images/4.png" class="img-responsive" alt="">
                             </div>
                             <div class="team-info">
                                  <h3>Nikhil Prasad</h3>
@@ -142,7 +142,7 @@
                   <div class="col-md-3 col-sm-6">
                     <div class="team-thumb">
                          <div class="team-image">
-                              <img src="images/mendor-5.jpg" class="img-responsive" alt="">
+                              <img src="images/5.png" class="img-responsive" alt="">
                          </div>
                          <div class="team-info">
                               <h3>Sivaprasad</h3>
@@ -159,7 +159,7 @@
                <div class="col-md-3 col-sm-6">
                     <div class="team-thumb">
                         <div class="team-image">
-                            <img src="images/mendor-6.jpg" class="img-responsive" alt="">
+                            <img src="images/6.png" class="img-responsive" alt="">
                         </div>
                         <div class="team-info">
                             <h3>Vineesha</h3>
@@ -176,7 +176,7 @@
                 <div class="col-md-3 col-sm-6">
                        <div class="team-thumb">
                             <div class="team-image">
-                                 <img src="images/mendor-7.jpg" class="img-responsive" alt="">
+                                 <img src="images/7.png" class="img-responsive" alt="">
                             </div>
                             <div class="team-info">
                                  <h3>Arun</h3>
@@ -193,7 +193,7 @@
                 <div class="col-md-3 col-sm-6">
                     <div class="team-thumb">
                          <div class="team-image">
-                              <img src="images/mendor-8.jpg" class="img-responsive" alt="">
+                              <img src="images/8.png" class="img-responsive" alt="">
                          </div>
                          <div class="team-info">
                               <h3>Bhushair</h3>
@@ -209,7 +209,7 @@
                 <div class="col-md-3 col-sm-6">
                     <div class="team-thumb">
                          <div class="team-image">
-                              <img src="images/mendor-9.jpg" class="img-responsive" alt="">
+                              <img src="images/9.png" class="img-responsive" alt="">
                          </div>
                          <div class="team-info">
                               <h3>Vinayan</h3>
@@ -225,7 +225,7 @@
                 <div class="col-md-3 col-sm-6">
                     <div class="team-thumb">
                          <div class="team-image">
-                              <img src="images/mendor-10.jpg" class="img-responsive" alt="">
+                              <img src="images/10.png" class="img-responsive" alt="">
                          </div>
                          <div class="team-info">
                               <h3>Amar</h3>
@@ -241,7 +241,7 @@
                 <div class="col-md-3 col-sm-6">
                     <div class="team-thumb">
                          <div class="team-image">
-                              <img src="images/mendor-11.jpg" class="img-responsive" alt="">
+                              <img src="images/11.png" class="img-responsive" alt="">
                          </div>
                          <div class="team-info">
                               <h3>Siraj Nilambur</h3>
@@ -257,7 +257,7 @@
                 <div class="col-md-3 col-sm-6">
                     <div class="team-thumb">
                          <div class="team-image">
-                              <img src="images/mendor-12.jpg" class="img-responsive" alt="">
+                              <img src="images/12.png" class="img-responsive" alt="">
                          </div>
                          <div class="team-info">
                               <h3>Abhiraj</h3>
