--- a/index.html
+++ b/index.html
@@ -74,15 +74,16 @@
      <!-- HOME -->
      <section id="home">
           <div class="row">
-
                     <div class="owl-carousel owl-theme home-slider">
                          <div class="item item-first">
                               <div class="caption">
                                    <div class="container">
                                         <div class="col-md-6 col-sm-12">
-                                             <h1>Distance Learning Education Center</h1>
-                                             <h3>Our online courses are designed to fit in your industry supporting all-round with latest technologies.</h3>
-                                             <a href="#feature" class="section-btn btn btn-default smoothScroll">Discover more</a>
+                                             <video id="video" source src="images/bg.mp4" type="video">
+                                                  <h1>Distance Learning Education Center</h1>
+                                                  <h3>Our online courses are designed to fit in your industry supporting all-round with latest technologies.</h3>
+                                                  <a href="#feature" class="section-btn btn btn-default smoothScroll">Discover more</a>
+                                             </video>
                                         </div>
                                    </div>
                               </div>
