--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     </ul>
 
                     <ul class="nav navbar-nav navbar-right">
-                         <li><a href="login.html"><button type="button" class="btn btn-primary">Join Now</button></a></li>
+                         <li><a href="test.html"><button type="button" class="btn btn-primary">Take Test</button></a></li>
                     </ul>
                </div>
 
@@ -79,11 +79,10 @@
                               <div class="caption">
                                    <div class="container">
                                         <div class="col-md-6 col-sm-12">
-                                             <video id="video" source src="images/bg.mp4" type="video">
+                                             
                                                   <h1>Distance Learning Education Center</h1>
                                                   <h3>Our online courses are designed to fit in your industry supporting all-round with latest technologies.</h3>
                                                   <a href="#feature" class="section-btn btn btn-default smoothScroll">Discover more</a>
-                                             </video>
                                         </div>
                                    </div>
                               </div>
@@ -121,7 +120,6 @@
      <section id="feature">
           <div class="container">
                <div class="row">
-
                     <div class="col-md-4 col-sm-4">
                          <div class="feature-thumb">
                               <span>01</span>
