--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
                                    <div class="container">
                                         <div class="col-md-6 col-sm-12">
                                              
-                                                  <h1>Distance Learning Education Center</h1>
-                                                  <h3>Our online courses are designed to fit in your industry supporting all-round with latest technologies.</h3>
-                                                  <a href="#feature" class="section-btn btn btn-default smoothScroll">Discover more</a>
+                                                  <!-- <h1>Distance Learning Education Center</h1>
+                                                  <h3>Our online courses are designed to fit in your industry supporting all-round with latest technologies.</h3> -->
+                                                  <!-- <a href="#feature" class="section-btn btn btn-default smoothScroll">Discover more</a> -->
                                         </div>
                                    </div>
                               </div>
@@ -92,9 +92,9 @@
                               <div class="caption">
                                    <div class="container">
                                         <div class="col-md-6 col-sm-12">
-                                             <h1>Start your journey with our practical courses</h1>
-                                             <h3>Our online courses are built in partnership with technology leaders and are designed to meet industry demands.</h3>
-                                             <a href="#courses" class="section-btn btn btn-default smoothScroll">Take a course</a>
+                                             <!-- <h1>Start your journey with our practical courses</h1>
+                                             <h3>Our online courses are built in partnership with technology leaders and are designed to meet industry demands.</h3> -->
+                                             <!-- <a href="#courses" class="section-btn btn btn-default smoothScroll">Take a course</a> -->
                                         </div>
                                    </div>
                               </div>
@@ -104,9 +104,9 @@
                               <div class="caption">
                                    <div class="container">
                                         <div class="col-md-6 col-sm-12">
-                                             <h1>Efficient Learning Methods</h1>
-                                             <h3>Nam eget sapien vel nibh euismod vulputate in vel nibh. Quisque eu ex eu urna venenatis sollicitudin ut at libero. Visit <a rel="nofollow" href="https://www.facebook.com/templatemo">templatemo</a> page.</h3>
-                                             <a href="#contact" class="section-btn btn btn-default smoothScroll">Let's chat</a>
+                                             <!-- <h1>Efficient Learning Methods</h1>
+                                             <h3>Nam eget sapien vel nibh euismod vulputate in vel nibh. Quisque eu ex eu urna venenatis sollicitudin ut at libero. Visit <a rel="nofollow" href="https://www.facebook.com/templatemo">templatemo</a> page.</h3> -->
+                                             <!-- <a href="#contact" class="section-btn btn btn-default smoothScroll">Let's chat</a> -->
                                         </div>
                                    </div>
                               </div>
@@ -203,7 +203,7 @@
           </div>
      </section>
 
-     <div class="counters">
+     <!-- <div class="counters">
           <div class="counter">
                <div class="count" >15</div>
                <div class="label">Courses</div>
@@ -224,7 +224,7 @@
                <div class="count" >500</div>
                <div class="label">Tests</div>
           </div>
-     </div>
+     </div> -->
 
 
      <!-- Courses -->
