--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                     <div class="col-md-12 col-sm-12">
                          <div class="section-title">
                               <h2>POPULAR COURSES <small>Upgrade your skills with newest courses</small></h2>
-                              <a href="courses.html"><button class="view-more-btn">View More ▶</button></a>    
+                                  
                          </div>
 
                          <div class="owl-carousel owl-theme owl-courses">
@@ -398,6 +398,7 @@
                          
                     </div>
                </div>
+               <a href="courses.html"><center><button class="view-more-btn">View More ▶</button></center></a>
           </div>
      </section>
 
