--- a/team.html
+++ b/team.html
@@ -78,8 +78,8 @@
                                  <img src="images/mendor-1.jpg" class="img-responsive" alt="">
                             </div>
                             <div class="team-info">
-                                 <h3>Brijith Lal</h3>
-                                 <span>Economics</span>
+                                 <h3>Abhiraj</h3>
+                                 <span>Physics</span>
                             </div>
                             <ul class="social-icon">
                                  <li><a href="#" class="fa fa-facebook-square" attr="facebook icon"></a></li>
@@ -92,7 +92,7 @@
                   <div class="col-md-3 col-sm-6">
                        <div class="team-thumb">
                             <div class="team-image">
-                                 <img src="images/2.png" class="img-responsive" alt="">
+                                 <img src="images/mendor-2.jpg" class="img-responsive" alt="">
                             </div>
                             <div class="team-info">
                                  <h3>Abhai</h3>
@@ -108,11 +108,11 @@
                   <div class="col-md-3 col-sm-6">
                        <div class="team-thumb">
                             <div class="team-image">
-                                 <img src="images/3.png" class="img-responsive" alt="">
+                                 <img src="images/mendor-3.jpg" class="img-responsive" alt="">
                             </div>
                             <div class="team-info">
-                                 <h3>Sameer</h3>
-                                 <span>Chemistry</span>
+                                 <h3>Brijith Lal</h3>
+                                 <span>Economics</span>
                             </div>
                             <ul class="social-icon">
                                  <li><a href="#" class="fa fa-twitter"></a></li>
@@ -145,7 +145,7 @@
                               <img src="images/5.png" class="img-responsive" alt="">
                          </div>
                          <div class="team-info">
-                              <h3>Sivaprasad</h3>
+                              <h3>Sameer</h3>
                               <span>Chemistry</span>
                          </div>
                          <ul class="social-icon">
@@ -196,8 +196,8 @@
                               <img src="images/8.png" class="img-responsive" alt="">
                          </div>
                          <div class="team-info">
-                              <h3>Bhushair</h3>
-                              <span>English</span>
+                              <h3>Shivprasad</h3>
+                              <span>Chemistry</span>
                          </div>
                          <ul class="social-icon">
                               <li><a href="#" class="fa fa-twitter"></a></li>
@@ -212,8 +212,8 @@
                               <img src="images/9.png" class="img-responsive" alt="">
                          </div>
                          <div class="team-info">
-                              <h3>Vinayan</h3>
-                              <span>Geography</span>
+                              <h3>Bhushair</h3>
+                              <span>English<span>
                          </div>
                          <ul class="social-icon">
                               <li><a href="#" class="fa fa-twitter"></a></li>
@@ -260,8 +260,8 @@
                               <img src="images/12.png" class="img-responsive" alt="">
                          </div>
                          <div class="team-info">
-                              <h3>Abhiraj</h3>
-                              <span>Physics</span>
+                              <h3>Vinayan</h3>
+                              <span>Geography</span>
                          </div>
                          <ul class="social-icon">
                               <li><a href="#" class="fa fa-twitter"></a></li>
