updated and added some files

--- a/courses.html
+++ b/courses.html
@@ -37,7 +37,7 @@
                   </button>
 
                   <!-- lOGO TEXT HERE -->
-                  <a href="#" class="navbar-brand"><img src="/images/logo-g.png" alt="logo" height="40px" width="40px"></a>
+                  <a href="#" class="navbar-brand"><img src="images/logo-g.png" alt="logo" height="40px" width="40px"></a>
                   <a href="#" class="navbar-brand">Genius</a>
              </div>
 
@@ -81,7 +81,7 @@
                                 <div class="courses-thumb">
                                     <div class="courses-top">
                                         <div class="courses-image">
-                                            <img src="images/courses-image5.jpg" class="img-responsive" alt="">
+                                            <img src="images/sub1.jpg" class="img-responsive" alt="">
                                         </div>
                                         <div class="courses-date">
                                             <span><i class="fa fa-calendar"></i> 5 / 10 / 2018</span>
@@ -96,7 +96,7 @@
 
                                     <div class="courses-info">
                                         <div class="courses-author">
-                                            <img src="images/author-image2.jpg" class="img-responsive" alt="">
+                                            <img src="images/sub1.jpg" class="img-responsive" alt="">
                                             <span>Jessica</span>
                                         </div>
                                         <div class="courses-price free">
@@ -113,7 +113,7 @@
                             <div class="courses-thumb">
                                 <div class="courses-top">
                                     <div class="courses-image">
-                                        <img src="images/courses-image5.jpg" class="img-responsive" alt="">
+                                        <img src="images/sub1.jpg" class="img-responsive" alt="">
                                     </div>
                                     <div class="courses-date">
                                         <span><i class="fa fa-calendar"></i> 5 / 10 / 2018</span>
@@ -128,7 +128,7 @@
 
                                 <div class="courses-info">
                                     <div class="courses-author">
-                                        <img src="images/author-image2.jpg" class="img-responsive" alt="">
+                                        <img src="images/sub1.jpg" class="img-responsive" alt="">
                                         <span>Jessica</span>
                                     </div>
                                     <div class="courses-price free">
@@ -145,7 +145,38 @@
                             <div class="courses-thumb">
                                 <div class="courses-top">
                                     <div class="courses-image">
-                                            <img src="images/courses-image5.jpg" class="img-responsive" alt="">
+                                            <img src="images/sub1.jpg" class="img-responsive" alt="">
+                                    </div>
+                                    <div class="courses-date">
+                                            <span><i class="fa fa-calendar"></i> 5 / 10 / 2018</span>
+                                            <span><i class="fa fa-clock-o"></i> 10 Hours</span>
+                                    </div>
+                                </div>
+
+                                <div class="courses-detail">
+                                    <h3><a href="#">Business &amp; Management</a></h3>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                                </div>
+
+                                <div class="courses-info">
+                                    <div class="courses-author">
+                                            <img src="images/sub1.jpg" class="img-responsive" alt="">
+                                            <span>Jessica</span>
+                                    </div>
+                                    <div class="courses-price free">
+                                            <a href="#"><span>Free</span></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-md-4 col-sm-4">
+                        <div class="item">
+                            <div class="courses-thumb">
+                                <div class="courses-top">
+                                    <div class="courses-image">
+                                            <img src="images/sub1.jpg" class="img-responsive" alt="">
                                     </div>
                                     <div class="courses-date">
                                             <span><i class="fa fa-calendar"></i> 5 / 10 / 2018</span>
@@ -176,7 +207,7 @@
                             <div class="courses-thumb">
                                 <div class="courses-top">
                                     <div class="courses-image">
-                                            <img src="images/courses-image5.jpg" class="img-responsive" alt="">
+                                            <img src="images/sub1.jpg" class="img-responsive" alt="">
                                     </div>
                                     <div class="courses-date">
                                             <span><i class="fa fa-calendar"></i> 5 / 10 / 2018</span>
@@ -207,7 +238,7 @@
                             <div class="courses-thumb">
                                 <div class="courses-top">
                                     <div class="courses-image">
-                                            <img src="images/courses-image5.jpg" class="img-responsive" alt="">
+                                            <img src="images/sub1.jpg" class="img-responsive" alt="">
                                     </div>
                                     <div class="courses-date">
                                             <span><i class="fa fa-calendar"></i> 5 / 10 / 2018</span>
@@ -222,38 +253,7 @@
 
                                 <div class="courses-info">
                                     <div class="courses-author">
-                                            <img src="images/author-image2.jpg" class="img-responsive" alt="">
-                                            <span>Jessica</span>
-                                    </div>
-                                    <div class="courses-price free">
-                                            <a href="#"><span>Free</span></a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-md-4 col-sm-4">
-                        <div class="item">
-                            <div class="courses-thumb">
-                                <div class="courses-top">
-                                    <div class="courses-image">
-                                            <img src="images/courses-image5.jpg" class="img-responsive" alt="">
-                                    </div>
-                                    <div class="courses-date">
-                                            <span><i class="fa fa-calendar"></i> 5 / 10 / 2018</span>
-                                            <span><i class="fa fa-clock-o"></i> 10 Hours</span>
-                                    </div>
-                                </div>
-
-                                <div class="courses-detail">
-                                    <h3><a href="#">Business &amp; Management</a></h3>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                                </div>
-
-                                <div class="courses-info">
-                                    <div class="courses-author">
-                                            <img src="images/author-image2.jpg" class="img-responsive" alt="">
+                                            <img src="images/sub1.jpg" class="img-responsive" alt="">
                                             <span>Jessica</span>
                                     </div>
                                     <div class="courses-price free">
@@ -270,7 +270,7 @@
                             <div class="courses-thumb">
                                 <div class="courses-top">
                                     <div class="courses-image">
-                                            <img src="images/courses-image5.jpg" class="img-responsive" alt="">
+                                            <img src="images/sub1.jpg" class="img-responsive" alt="">
                                     </div>
                                     <div class="courses-date">
                                             <span><i class="fa fa-calendar"></i> 5 / 10 / 2018</span>
@@ -300,7 +300,7 @@
                             <div class="courses-thumb">
                                 <div class="courses-top">
                                     <div class="courses-image">
-                                            <img src="images/courses-image5.jpg" class="img-responsive" alt="">
+                                            <img src="images/sub1.jpg" class="img-responsive" alt="">
                                     </div>
                                     <div class="courses-date">
                                             <span><i class="fa fa-calendar"></i> 5 / 10 / 2018</span>
@@ -330,7 +330,7 @@
                                 <div class="courses-thumb">
                                     <div class="courses-top">
                                         <div class="courses-image">
-                                            <img src="images/courses-image5.jpg" class="img-responsive" alt="">
+                                            <img src="images/sub1.jpg" class="img-responsive" alt="">
                                         </div>
                                         <div class="courses-date">
                                             <span><i class="fa fa-calendar"></i> 5 / 10 / 2018</span>
@@ -345,7 +345,7 @@
 
                                     <div class="courses-info">
                                         <div class="courses-author">
-                                            <img src="images/author-image2.jpg" class="img-responsive" alt="">
+                                            <img src="images/sub1.jpg" class="img-responsive" alt="">
                                             <span>Jessica</span>
                                         </div>
                                         <div class="courses-price free">
