--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
                <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-nav-first">
                          <li><a href="#top" class="smoothScroll">HOME</a></li>
-                         <li><a href="#about" class="smoothScroll">ABOUT</a></li>
-                         <li><a href="#team" class="smoothScroll">OUR TEAM</a></li>
+                         <li><a href="#about" class="smoothScroll">ABOUT US</a></li>
+                         <li><a href="team.html" class="smoothScroll">OUR TEAM</a></li>
                          <li><a href="courses.html" class="smoothScroll">COURSES</a></li>
                          <li><a href="#testimonial" class="smoothScroll">REVIEWS</a></li>
                          <li><a href="#contact" class="smoothScroll">CONTACT US</a></li>
