--- a/team.html
+++ b/team.html
@@ -26,7 +26,7 @@
 <body id="top" data-spy="scroll" data-target=".navbar-collapse" data-offset="50">
 
     <!-- MENU -->
-    <section class="navbar custom-navbar navbar-fixed-top" role="navigation">
+    <!-- <section class="navbar custom-navbar navbar-fixed-top" role="navigation">
         <div class="container">
 
              <div class="navbar-header">
@@ -36,12 +36,12 @@
                        <span class="icon icon-bar"></span>
                   </button>
 
-                  <!-- lOGO TEXT HERE -->
+                  
                   <a href="#" class="navbar-brand"><img src="/images/logo-g.png" alt="logo" height="40px" width="40px"></a>
                   <a href="#" class="navbar-brand">Genius</a>
              </div>
 
-             <!-- MENU LINKS -->
+           
              <div class="collapse navbar-collapse">
                   <ul class="nav navbar-nav navbar-nav-first">
                        <li><a href="#top" class="smoothScroll">Home</a></li>
@@ -58,7 +58,7 @@
              </div>
 
         </div>
-   </section>
+   </section> -->
 
 
     <!-- TEAM -->
