--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -24,6 +25,7 @@
      <link rel="stylesheet" href="css/style.css">
 
 </head>
+
 <body id="top" data-spy="scroll" data-target=".navbar-collapse" data-offset="50">
 
      <!-- PRE LOADER -->
@@ -139,8 +141,8 @@
                     <div class="col-md-4 col-sm-4">
                          <div class="feature-thumb">
                               <span>03</span>
-                              <h3>WEEKLY DOCKET</h3>
-                              <p>Weekly updated dockets, helping students plan the week in prior. Ways of Systematic, precise learning are been trained.</p>
+                              <h3>WEEKLY UPDATES</h3>
+                              <p>We conduct topic-wise exams, previous question exams, model exams, and provide comprehensive class notes and study materials. Benefit from regular weekly revisions and monthly revision sessions.</p>
                          </div>
                     </div>
 
@@ -156,31 +158,32 @@
 
                     <div class="col-md-6 col-sm-12">
                          <div class="about-info">
-                              <h2>Why You Should Start Learning With Us?</h2>
+                              <h2>What Sets Us Apart?</h2>
 
                               <figure>
                                    <span><i class="fa fa-users"></i></span>
                                    <figcaption>
-                                        <h3>Proven Track Record</h3>
-                                        <p>Genius PSC Coaching Centre has a history of producing consistently impressive results. Our alumni's achievements stand as a testament to the effectiveness of our coaching methods.</p>
+                                        <h3>Expert Faculty</h3>
+                                        <p>We take pride in having some of the finest educators in Kerala who are dedicated to your success.</p>
                                    </figcaption>
                               </figure>
 
                               <figure>
                                    <span><i class="fa fa-certificate"></i></span>
                                    <figcaption>
-                                        <h3>Experienced Faculty</h3>
-                                        <p>Our team comprises seasoned educators who bring years of experience and expertise to the classroom. They understand the nuances of PSC exams and are skilled in delivering effective lessons</p>
+                                        <h3>Flexible Batches</h3>
+                                        <p>We offer Regular, Sunday, and Evening batches to accommodate diverse schedules.</p>
                                    </figcaption>
                               </figure>
 
                               <figure>
                                    <span><i class="fa fa-bar-chart-o"></i></span>
                                    <figcaption>
-                                        <h3>Comprehensive Curriculum</h3>
-                                        <p>Our meticulously crafted curriculum covers every facet of the PSC exam syllabus, including Kerala-specific topics. You can be confident that no crucial aspect is overlooked.</p>
+                                        <h3>Free Admissions</h3>
+                                        <p>For early birds starting their PSC exam preparations, we offer admission to our LDC CORE and LP/UP SURE batches without an admission fee.</p>
                                    </figcaption>
                               </figure>
+
                          </div>
                     </div>
 
@@ -235,7 +238,6 @@
                     <div class="col-md-12 col-sm-12">
                          <div class="section-title">
                               <h2>POPULAR COURSES <small>Upgrade your skills with newest courses</small></h2>
-                                  
                          </div>
 
                          <div class="owl-carousel owl-theme owl-courses">
@@ -582,10 +584,10 @@
                     <div class="row">
                          <div class="col-sm-6 col-md-3 ">
                               <a class="webintern-footer-logo" href="#">
-                                   <img class="img-responsive" src="images/logo-g.png" style="width:100px;" alt="">
+                                   <img class="img-responsive" src="images/Genius Logo.png" style="width:100px;" alt="">
                               </a>
                               <div class="simple-text dark padding-sm">
-                                   <p>Genius PSC Coaching Centre garners acclaim from students for its personalized teaching, accomplished faculty, and inclusive curriculum.</p>
+                                   <p>Join us at GENIUS PSC Coaching Centre located at Bus Stand Building, Ramanattukara. Contact us for admissions and take the first step towards a bright future. Your success is our commitment!</p>
                               </div>
                               <div class="empty-space xs-25 sm-25"></div>
                          </div>
