--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                          <li><a href="#about" class="smoothScroll">ABOUT US</a></li>
                          <li><a href="team.html" class="smoothScroll">OUR TEAM</a></li>
                          <li><a href="courses.html" class="smoothScroll">COURSES</a></li>
-                         <li><a href="#testimonial" class="smoothScroll">REVIEWS</a></li>
+                         
                          <li><a href="#contact" class="smoothScroll">CONTACT US</a></li>
                     </ul>
 
@@ -287,7 +287,7 @@
                                              </div>
 
                                              <div class="courses-detail">
-                                                  <h3><a href="#">Sub Inspector</a></h3>
+                                                  <h3><a href="courses.html">Sub Inspector</a></h3>
                                                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                                              </div>
 
@@ -318,7 +318,7 @@
                                              </div>
 
                                              <div class="courses-detail">
-                                                  <h3><a href="#">Plus Two Main</a></h3>
+                                                  <h3><a href="courses.html">Plus Two Main</a></h3>
                                                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                                              </div>
 
@@ -349,7 +349,7 @@
                                              </div>
 
                                              <div class="courses-detail">
-                                                  <h3><a href="#">Plus Two Prelims</a></h3>
+                                                  <h3><a href="courses.html">Plus Two Prelims</a></h3>
                                                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                                              </div>
 
@@ -380,7 +380,7 @@
                                              </div>
 
                                              <div class="courses-detail">
-                                                  <h3><a href="#">Degree Main</a></h3>
+                                                  <h3><a href="courses.html">Degree Main</a></h3>
                                                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                                              </div>
 
@@ -411,7 +411,7 @@
                                              </div>
 
                                              <div class="courses-detail">
-                                                  <h3><a href="#">Degree Prelims</a></h3>
+                                                  <h3><a href="courses.html">Degree Prelims</a></h3>
                                                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                                              </div>
 
@@ -432,7 +432,7 @@
                          
                     </div>
                </div>
-               <a href="courses.html"><center><button class="view-more-btn">Explore More ▶</button></center></a>
+               <!-- <a href="courses.html"><center><button class="view-more-btn">Explore More ▶</button></center></a> -->
           </div>
      </section>
 
